# ChonkyStation

./: .gitignore  .gitmodules  Bus.cpp  Bus.h  CD.cpp  CD.h  CMakeLists.txt  ChonkyStation.cpp  ChonkyStation.rc  ChonkyStation.sln  ChonkyStation.vcxproj  ChonkyStation.vcxproj.filters  Color.cpp  Color.h  IRQ.cpp  IRQ.h  README.md  Rasterizer.cpp  Rasterizer.h  cdrom.cpp  cdrom.h  controller.cpp  controller.h  cop0.cpp  cop0.h  cpu.cpp  cpu.h  gpu.cpp  gpu.h  gte.cpp  gte.h  imgui.ini  logwindow.h  mdec.cpp  mdec.h  memcard1.mcd  memory.cpp  memory.h  pad.cpp  pad.h  (+12 more)
.github/: macos-bundle.sh
.github/scripts/: run_unit_tests.sh
.github/workflows/: build.yml  linux_build.yml  macos_build.yml  run_unit_tests.yml  windows_build.yml
Shader Editor/: ZepEditor.cc  ZepEditor.h  shader-editor.cc  shader-editor.h
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: chonk_renderer.cpp  chonk_renderer.h
android/gradle/wrapper/: gradle-wrapper.properties
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/backends/: imgui_impl_glfw.cpp
src/: CMakeLists.txt  main.cpp  playstation.hpp
src/cdrom/: cdrom.cpp  cdrom.hpp
src/common/: helpers.hpp
src/cpu/: cpu.cpp  cpu.hpp  cpu_core.hpp  interrupt.cpp  interrupt.hpp
src/cpu/backends/interpreter/: interpreter.cpp  interpreter.hpp
src/cpu/backends/old_interpreter/: old_interpreter.cpp  old_interpreter.hpp  old_interpreter.txt
src/cpu/disassembler/: disassembler.cpp  disassembler.hpp
src/dma/: dma.cpp  dma.hpp
src/gpu/: gpu.cpp  gpu.hpp
src/gpu/backends/: base.hpp  vertex.hpp
src/gpu/backends/software/: gpu_software.cpp  gpu_software.hpp
src/intc/: intc.cpp  intc.hpp
src/memory/: memory.cpp  memory.hpp
src/scheduler/: scheduler.cpp  scheduler.hpp
test/: CMakeLists.txt
test/diff/: diff.cpp  diff.hpp
tests/test_r0/: test_r0.c  test_r0.cpp
tests/test_sign_extension/: test_sign_extension.c  test_sign_extension.cpp
x64/Debug/: ChonkyStation.exe.recipe  ChonkyStation.vcxproj.FileListAbsolute.txt  chonkystation.obj.enc  vc142.idb
x64/Debug/ChonkyStation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChonkyStation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
zep/demos/demo_imgui/: main.cpp
zep/demos/demo_qt/: main-qt.cpp  mainwindow.cpp
zep/extensions/orca/: mode_orca.cpp  mode_orca.h  orca.cpp  syntax_orca.cpp  syntax_orca.h
zep/extensions/repl/: mode_repl.cpp
zep/include/: zep.h
zep/include/zep/: buffer.h  commands.h  editor.h  filesystem.h  glyph_iterator.h  indexer.h  line_widgets.h  mode.h  mode_search.h  mode_tree.h  mode_vim.h  range_markers.h  regress.h  scroller.h  splits.h  syntax.h  theme.h  window.h
zep/include/zep/imgui/: console_imgui.h  display_imgui.h  editor_imgui.h
zep/include/zep/mcommon/file/: path.h
zep/include/zep/mcommon/utf8/: unchecked.h
zep/include/zep/qt/: zepdisplay_qt.h  zepwidget_qt.h
zep/src/: buffer.cpp  commands.cpp  display.cpp  editor.cpp  filesystem.cpp  glyph_iterator.cpp  indexer.cpp  keymap.cpp  line_widgets.cpp  mode.cpp  mode_search.cpp  mode_standard.cpp  mode_tree.cpp  mode_vim.cpp  range_markers.cpp  regress.cpp  scroller.cpp  splits.cpp  syntax.cpp  syntax_markdown.cpp  syntax_providers.cpp  syntax_rainbow_brackets.cpp  syntax_tree.cpp  tab_window.cpp  theme.cpp  window.cpp
zep/src/mcommon/animation/: timer.cpp
zep/src/mcommon/file/: path.cpp
zep/src/mcommon/string/: murmur_hash.cpp  stringutils.cpp
zep/src/tests/: buffer.test.cpp  gap_buffer.test.cpp  mode_standard.test.cpp  mode_vim.test.cpp  syntax.test.cpp
(+6 files in other folders)
